upgrade: added to Auth middleware to some routes
